5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1595_2895.log
== SUBMITION (2019-03-23 17:55:49) 
-- CODE:
preco = float(input("Qual o valor unitario do jogo? "))
qunt = int(input("Quantos s達o os jogos? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.135849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    qunt = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:56:18) 
-- CODE:
qunt = int(input("Quantos s達o os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.21138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total = preco * quant + frete
NameError: name 'quant' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:56:20) 
-- CODE:
qunt = int(input("Quantos s達o os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.13094
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total = preco * quant + frete
NameError: name 'quant' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:56:22) 
-- CODE:
qunt = int(input("Quantos s達o os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco * quant + frete
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:56:45) 
-- CODE:
qunt = int(input("Quantos sao os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.111892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total = preco * quant + frete
NameError: name 'quant' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:57:02) 
-- CODE:
qunt = int(input("Quantos sa6o os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = preco * quant + frete
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:57:33) 
-- CODE:
quant = int(input("Quantos sao os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.203169
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:47:46) 
-- CODE:
quant = int(input("Quantos sao os jogos? "))
preco = float(input("Qual o valor unitario do jogo? "))
frete = float(input('Qual o valor do frete? '))
total = preco * quant + frete
print(total)
-- EXECUTION TIME:
0.166161
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
